Fix PWA background gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,18 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
     margin: 0 auto
 }
 
+.bgfix {
+    background: linear-gradient(135deg, #5CAD85 10%, #339966 100%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
 body, html {
     overflow-x: hidden;
     color: #3F704D;
-    background: linear-gradient(135deg, #5CAD85 10%, #339966 100%);
     height: 100%
 }
 
@@ -41,7 +49,8 @@ h1 {
     font-style: oblique;
     font-weight: 700;
     text-transform: uppercase;
-    color: #FFF
+    color: #FFF;
+    margin-top: 20px
 }
 
 h2 {
